# cultural-qa-llm

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: debug.yaml  lora_mcq.yaml  lora_saq.yaml  mcq_baseline.yaml
data/: test_dataset_mcq.csv  test_dataset_saq.csv  train_dataset_mcq.csv  train_dataset_mcq_expanded.csv  train_dataset_saq.csv  train_dataset_saq_expanded.csv
prompts/: mcq_system_prompt.txt  saq_system_prompt.txt
scripts/: finetune_mcq_saq_lora.slurm  full_pipeline.slurm  full_pipeline_alpha.slurm  full_pipeline_capella.slurm  full_pipeline_capella_parallel.slurm  manage_deps.py  predict_mcq.slurm  predict_saq.slurm  run_job.slurm  setup_env.sh
src/: build_index.py  corpus_retreival.py  data_loader.py  expand_mcq_dataset.py  expand_saq.py  finetune_mcq_saq_lora.py  finetune_mcq_saq_lora_multi.py  model.py  predict.py  rag_retrieve.py  train.py  utils.py
submission/: make_submission.py
